near-sdk/compilation_tests/double_contract_state_error.rs
use near_sdk::near;

#[near(contract_state)]
pub struct Contract {}

pub mod mod1 {
    use near_sdk::near;

    #[near(contract_state)]
    struct Contract {}
}

fn main() {}
